--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
     gap: 10px;
 }
 
+.row {
+    height: 100%;
+}
+
 #keyboard p {
     border: solid 2px black;
     padding: 10px;
@@ -36,3 +40,4 @@ body {
 .pressed {
     background-color: red;
 }
+
