--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
     text-align: center;
 }
 
+#currencies>* {
+    display: none
+}
+
+#clicks {
+    display: block;
+}
+
 #keyboard {
     display: flex;
     justify-content: center;
@@ -40,4 +48,3 @@ body {
 .pressed {
     background-color: red;
 }
-
