--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --mouse-x: 0px;
+    --mouse-y: 0px;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -193,7 +198,7 @@ body {
 #totalMilestones {
     display: grid;
     width: 90%;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
 }
 
@@ -202,4 +207,35 @@ body {
     font-size: 18px;
     border: solid 1px black;
     padding: 20px;
+}
+
+#hiddenUnlocks {
+    display: flex;
+    flex-direction: row;
+    border: solid 2px black;
+    padding: 20px;
+}
+
+#hiddenUnlocks>div {
+    display: flex;
+    border: solid 2px black;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    width: 50px;
+    height: 50px;
+}
+
+#hiddenUnlocks>div>span {
+    display: none;
+    font-size: 15px;
+    border: solid 1px black;
+    background-color: antiquewhite;
+}
+
+#hiddenUnlocks>div:hover>span {
+    display: block;
+    position: absolute;
+    left: calc(var(--mouse-x) - 110px);
+    top: calc(var(--mouse-y) - 100px);
 }
