--- a/style.css
+++ b/style.css
@@ -39,13 +39,14 @@ body {
     flex-direction: column;
     gap: 20px;
     padding-top: 20px;
+    padding-bottom: 20px;
 
 }
 
 #menu>button {
     background-color: rgb(248, 248, 255);
     border-radius: 5px;
-    height: 5%;
+    height: calc(100% / 9);
     width: 80%;
     margin-left: 5px;
     transition: background-color 1s;
